--- a/openidtokenbuilder/pom.xml
+++ b/openidtokenbuilder/pom.xml
@@ -4,7 +4,7 @@
 
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
-		<artifactId>openid-tokenbuilder</artifactId>
+		<artifactId>component-ids</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
@@ -129,6 +129,7 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-scr-plugin</artifactId>
+		<version>1.7.4</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
