--- a/dropins/openid-token-builder/pom.xml
+++ b/dropins/openid-token-builder/pom.xml
@@ -4,16 +4,16 @@
 
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
-		<artifactId>component-ids</artifactId>
+		<artifactId>openid-token-builder</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<relativePath>../dropins/pom.xml</relativePath>
 	</parent>
 
 	<groupId>com.wso2telco.ids</groupId>
 	<artifactId>openid-tokenbuilder</artifactId>
 	<packaging>bundle</packaging>
 
-	<name>OpenIDTokenBuilder</name>
+	<name>OpenID Token Builder</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
