--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 	</prerequisites>
 
 	<modules>
+		<module>dropins/openid-token-builder</module>
 	</modules>
 
 	<dependencies>
@@ -82,7 +83,7 @@
 		<repository>
 			<id>wso2telco-nexus</id>
 			<name>WSO2Telco internal Repository</name>
-			<url>http://54.84.175.67:8081/nexus/content/groups/public/</url>
+			<url>http://maven.wso2telco.com:8081/nexus/content/groups/public/</url>
 			<releases>
 				<enabled>true</enabled>
 				<updatePolicy>daily</updatePolicy>
@@ -93,7 +94,7 @@
 		<repository>
 			<id>wso2telco.releases</id>
 			<name>WSO2 internal Repository</name>
-			<url>http://54.84.175.67:8081/nexus/content/repositories/releases/</url>
+			<url>http://maven.wso2telco.com:8081/nexus/content/repositories/releases/</url>
 			<releases>
 				<enabled>true</enabled>
 				<updatePolicy>daily</updatePolicy>
@@ -104,7 +105,7 @@
 		<repository>
 			<id>wso2Telco.snapshots</id>
 			<name>WSO2Telco Snapshot Repository</name>
-			<url>http://54.84.175.67:8081/nexus/content/repositories/snapshots/</url>
+			<url>http://maven.wso2telco.com:8081/nexus/content/repositories/snapshots/</url>
 			<snapshots>
 				<enabled>true</enabled>
 				<updatePolicy>daily</updatePolicy>
@@ -119,13 +120,13 @@
 		<snapshotRepository>
 			<id>wso2Telco.snapshots</id>
 			<name>Snapshot repo</name>
-			<url>http://54.84.175.67:8081/nexus/content/repositories/snapshots</url>
+			<url>http://maven.wso2telco.com:8081/nexus/content/repositories/snapshots</url>
 		</snapshotRepository>
 		<!-- Publish the versioned releases here -->
 		<repository>
 			<id>wso2telco.releases</id>
 			<name>release repo</name>
-			<url>http://54.84.175.67:8081/nexus/content/repositories/releases/</url>
+			<url>http://maven.wso2telco.com:8081/nexus/content/repositories/releases/</url>
 		</repository>
 	</distributionManagement>
 
