--- a/dropins/openid-token-builder/pom.xml
+++ b/dropins/openid-token-builder/pom.xml
@@ -4,13 +4,13 @@
 
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
-		<artifactId>openid-token-builder</artifactId>
+		<artifactId>component-ids</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../dropins/pom.xml</relativePath>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<groupId>com.wso2telco.ids</groupId>
-	<artifactId>openid-tokenbuilder</artifactId>
+	<artifactId>openid-token-builder</artifactId>
 	<packaging>bundle</packaging>
 
 	<name>OpenID Token Builder</name>
@@ -85,7 +85,7 @@
 		<dependency>
 			<groupId>org.wso2.carbon</groupId>
 			<artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
-			<version>${org.wso2.carbon.identity.application.authentication.framework}</version>
+			<version>${org.wso2.carbon.identity.application.authentication.framework.version}</version>
 		</dependency>
 
 		<dependency>
