--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,13 @@
 	</prerequisites>
 
 	<modules>
-		<module>dropins/openid-token-builder</module>
+        <module>lib/user-claim-retriever</module>
+		<!--module>dropins/openid-token-builder</module>
         <module>webapps/authentication-endpoint</module>
         <module>webapps/operator-proxy-service</module>
         <module>webapps/url-shorten</module>
         <module>webapps/session-updater</module>
-        <module>webapps/user-registration</module>
+        <module>webapps/user-registration</module-->
 	</modules>
 
 	<dependencies>
