--- a/lib/user-claim-retriever/pom.xml
+++ b/lib/user-claim-retriever/pom.xml
@@ -6,6 +6,7 @@
 	<groupId>com.axiata.mife</groupId>
 	<artifactId>user-claim-retriever</artifactId>
 	<version>1.0-SNAPSHOT</version>
+	<name>User Claim Retriever</name>
 	<!--<packaging>war</packaging> -->
 
 	<dependencies>
@@ -24,8 +25,8 @@
 		<dependency>
 			<groupId>org.wso2.carbon</groupId>
 			<artifactId>org.wso2.carbon.identity.oauth</artifactId>
-			<version>4.2.3</version>
-			<scope>provided</scope>
+			<!-- <version>4.2.3</version> -->
+			<version>4.2.7</version>
 		</dependency>
 		<!-- <dependency> <groupId>org.wso2.carbon.identity</groupId> <artifactId>org.wso2.carbon.identity.oauth</artifactId> 
 			<version>4.4.0</version> </dependency> -->
@@ -41,11 +42,12 @@
 			<version>4.2.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- <dependency> <groupId>org.wso2.carbon</groupId> <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId> 
+			<version>4.2.2</version> <scope>provided</scope> </dependency> -->
 		<dependency>
-			<groupId>org.wso2.carbon</groupId>
+			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
-			<version>4.2.2</version>
-			<scope>provided</scope>
+			<version>4.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
