--- a/dropins/authenticate-selector/pom.xml
+++ b/dropins/authenticate-selector/pom.xml
@@ -3,86 +3,75 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.wso2telco.ids</groupId>
+		<artifactId>component-ids</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 
-    <groupId>Authendicatorselector</groupId>
-    <artifactId>Authendicatorselector</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>com.wso2telco.ids.authenticat.selector</artifactId>
     <packaging>jar</packaging>
 
-    <repositories>
-        <repository>
-            <id>wso2-nexus</id>
-            <name>WSO2 internal Repository</name>
-            <url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-                <checksumPolicy>ignore</checksumPolicy>
-            </releases>
-        </repository>
-    </repositories>
+ <properties>
+	<saxon.he.version>9.6.0-1</saxon.he.version>
+<org.wso2.carbon.identity.application.common.version>4.4.0</org.wso2.carbon.identity.application.common.version>
+<org.apache.felix.scr.annotations.version>1.9.6</org.apache.felix.scr.annotations.version>
+<org.wso2.carbon.core.services.version>4.4.0</org.wso2.carbon.core.services.version>
+<org.wso2.carbon.utils.version>4.4.0</org.wso2.carbon.utils.version>
+<org.wso2.carbon.identity.core.version>4.2.3</org.wso2.carbon.identity.core.version>
+<gson.version>2.1</gson.version>
+<httpclient.version>4.2.5</httpclient.version>
+<mnc.resolver.version>1.0.0-SNAPSHOT</mnc.resolver.version>
+<properties>
+
 
     <dependencies>
         <dependency>
             <groupId>net.sf.saxon</groupId>
             <artifactId>Saxon-HE</artifactId>
-            <version>9.6.0-1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
-            <version>4.2.2</version>
+            <version>${saxon.he.version}</version>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.identity.application.common</artifactId>
-            <version>4.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.identity.oauth</artifactId>
-            <version>4.2.3</version>
+            <version>${org.wso2.carbon.identity.application.common.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr.annotations</artifactId>
-            <version>1.9.6</version>
+            <version>${org.apache.felix.scr.annotations.version}</version>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.core.services</artifactId>
-            <version>4.2.0</version>
+            <version>${org.wso2.carbon.core.services.version}</version>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.utils</artifactId>
-            <version>4.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.identity.base</artifactId>
-            <version>4.2.2</version>
+            <version>${org.wso2.carbon.utils.version}</version>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.identity.core</artifactId>
-            <version>4.2.3</version>
+            <version>${org.wso2.carbon.identity.core.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.1</version>
+            <version>${gson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.2.5</version>
+            <version>${httpclient.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>com.axiata.dialog</groupId>
+            <groupId>com.wso2telco.core</groupId>
             <artifactId>mnc-resolver</artifactId>
-            <version>1.0.0</version>
+            <version>${mnc.resolver.version}</version>
             <type>jar</type>
         </dependency>
     </dependencies>
