--- a/dropins/pom.xml
+++ b/dropins/pom.xml
@@ -9,8 +9,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.wso2telco.ids</groupId>
-	<artifactId>openid-token-builder</artifactId>
+	<artifactId>dropins</artifactId>
 	<packaging>bundle</packaging>
 
 	<name>OpenID Token Builder</name>
@@ -18,21 +17,28 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<org.wso2.carbon.identity.oauth.version>4.4.0</org.wso2.carbon.identity.oauth.version>
 		<org.wso2.amber.version>0.22.1358727.wso2v4</org.wso2.amber.version>
 		<org.wso2.carbon.logging.version>4.4.0</org.wso2.carbon.logging.version>
-		<commons-httpclient.version>3.1</commons-httpclient.version>
+		<org.wso2.carbon.identity.base.version>4.4.0</org.wso2.carbon.identity.base.version>
 		<org.apache.sling.commons.json.version>2.0.6</org.apache.sling.commons.json.version>
 		<json.path.version>0.9.1</json.path.version>
 		<org.wso2.carbon.identity.core.version>4.4.0</org.wso2.carbon.identity.core.version>
 		<com.gsma.authenticators.version>1.0.0</com.gsma.authenticators.version>
+		<org.wso2.carbon.identity.application.authentication.framework.version>4.4.0</org.wso2.carbon.identity.application.authentication.framework.version>
 		<nimbus.jose.jwt.version>2.26.1</nimbus.jose.jwt.version>
 		<org.wso2.carbon.identity.provider.version>4.4.0</org.wso2.carbon.identity.provider.version>
 		<json.smart.version>1.0.9</json.smart.version>
 		<org.wso2.carbon.apimgt.impl.version>1.2.2</org.wso2.carbon.apimgt.impl.version>
-		<org.wso2.carbon.identity.application.mgt.stub.version>4.4.0</org.wso2.carbon.identity.application.mgt.stub.version>
 	</properties>
 
 	<dependencies>
+		
+		<dependency>
+			<groupId>org.wso2.carbon.identity</groupId>
+			<artifactId>org.wso2.carbon.identity.oauth</artifactId>
+			<version>${org.wso2.carbon.identity.oauth.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.amber.wso2</groupId>
 			<artifactId>amber</artifactId>
@@ -44,9 +50,9 @@
 			<version>${org.wso2.carbon.logging.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>commons-httpclient</groupId>
-			<artifactId>commons-httpclient</artifactId>
-			<version>${commons-httpclient.version}</version>
+			<groupId>org.wso2.carbon.identity</groupId>
+			<artifactId>org.wso2.carbon.identity.base</artifactId>
+			<version>${org.wso2.carbon.identity.base.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.sling</groupId>
@@ -67,6 +73,11 @@
 			<groupId>com.gsma.authenticators</groupId>
 			<artifactId>com.gsma.authenticators</artifactId>
 			<version>${com.gsma.authenticators.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.wso2.carbon.identity</groupId>
+			<artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
+			<version>${org.wso2.carbon.identity.application.authentication.framework.version}</version>
 		</dependency>
 
 		<dependency>
@@ -90,55 +101,6 @@
 		  <version>${org.wso2.carbon.apimgt.impl.version}</version>
 		  <type>jar</type>
 		 </dependency>
-		<dependency>
-		    <groupId>org.wso2.carbon.identity</groupId>
-		    <artifactId>org.wso2.carbon.identity.application.mgt.stub</artifactId>
-		    <version>${org.wso2.carbon.identity.application.mgt.stub.version}</version>
-		</dependency>
 	</dependencies>
-
-	<build>
-		<resources>
-			<resource>
-				<directory>src/main/java</directory>
-				<includes>
-					<include>**/*.properties</include>
-				</includes>
-			</resource>
-		</resources>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-scr-plugin</artifactId>
-		<version>1.7.4</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <extensions>true</extensions>
-                <configuration>
-                    <instructions>
-                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Bundle-Name>${project.artifactId}</Bundle-Name>
-                        <Import-Package>
-                            org.apache.commons.logging.*; version="1.0.4",
-                            org.wso2.carbon.identity.base.*,
-                            org.wso2.carbon.identity.core.*,
-                            org.wso2.carbon.identity.oauth.*,
-                            org.wso2.carbon.identity.openidconnect.*,
-                            *;resolution:=optional
-                        </Import-Package>
-                        <Export-Package>
-                            com.axiata.dialog.*
-                        </Export-Package>
-                        <Embed-Dependency>
-                            nimbus-jose-jwt|json-smart;scope=compile|runtime;inline=false
-                        </Embed-Dependency>
-                        <DynamicImport-Package>*</DynamicImport-Package>
-                    </instructions>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
