--- a/dropins/authenticate-selector/pom.xml
+++ b/dropins/authenticate-selector/pom.xml
@@ -10,20 +10,17 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-    <artifactId>com.wso2telco.ids.authenticat.selector</artifactId>
+    <artifactId>com.wso2telco.ids.authentic.selector</artifactId>
     <packaging>jar</packaging>
 
- <properties>
-	<saxon.he.version>9.6.0-1</saxon.he.version>
-<org.wso2.carbon.identity.application.common.version>4.4.0</org.wso2.carbon.identity.application.common.version>
-<org.apache.felix.scr.annotations.version>1.9.6</org.apache.felix.scr.annotations.version>
-<org.wso2.carbon.core.services.version>4.4.0</org.wso2.carbon.core.services.version>
-<org.wso2.carbon.utils.version>4.4.0</org.wso2.carbon.utils.version>
-<org.wso2.carbon.identity.core.version>4.2.3</org.wso2.carbon.identity.core.version>
-<gson.version>2.1</gson.version>
-<httpclient.version>4.2.5</httpclient.version>
-<mnc.resolver.version>1.0.0-SNAPSHOT</mnc.resolver.version>
-<properties>
+	 <properties>
+		<saxon.he.version>9.6.0-1</saxon.he.version>
+		<org.wso2.carbon.identity.application.common.version>4.4.0</org.wso2.carbon.identity.application.common.version>
+		<org.apache.felix.scr.annotations.version>1.9.6</org.apache.felix.scr.annotations.version>
+		<org.wso2.carbon.identity.core.version>4.2.3</org.wso2.carbon.identity.core.version>
+		<gson.version>2.1</gson.version>
+		<httpclient.version>4.2.5</httpclient.version>
+	<properties>
 
 
     <dependencies>
@@ -41,11 +38,6 @@
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr.annotations</artifactId>
             <version>${org.apache.felix.scr.annotations.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.core.services</artifactId>
-            <version>${org.wso2.carbon.core.services.version}</version>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon</groupId>
