--- a/dropins/gsma-authenticators/pom.xml
+++ b/dropins/gsma-authenticators/pom.xml
@@ -1,80 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-~ Copyright (c) 2009-2011, WSO2 Inc. (http://www.wso2.org) All Rights
-Reserved. ~ ~ Licensed under the Apache License, Version 2.0 (the
-"License"); ~ you may not use this file except in compliance with the
-License. ~ You may obtain a copy of the License at ~ ~
-http://www.apache.org/licenses/LICENSE-2.0 ~ ~ Unless required by
-applicable law or agreed to in writing, software ~ distributed under
-the License is distributed on an "AS IS" BASIS, ~ WITHOUT WARRANTIES
-OR CONDITIONS OF ANY KIND, either express or implied. ~ See the
-License for the specific language governing permissions and ~
-limitations under the License.
--->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+ <parent>
+                <groupId>com.wso2telco.ids</groupId>
+                <artifactId>com.wso2telco.ids.dropins.ids</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+                <relativePath>../pom.xml</relativePath>
+        </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.gsma.authenticators</groupId>
-    <artifactId>com.gsma.authenticators</artifactId>
+    <artifactId>com.wso2telco.ids.gsma.authenticator</artifactId>
     <packaging>bundle</packaging>
-    <version>1.0.0</version>
     <name>GSMA Application Authenticators</name>
+	<properties>
+		<org.wso2.carbon.identity.application.common.version>4.0.0</org.wso2.carbon.identity.application.common.version>
+		<org.apache.felix.scr.annotations.version>1.9.6</org.apache.felix.scr.annotations>
+	</properties>
 
-    <repositories>
-        <repository>
-            <id>wso2-nexus</id>
-            <name>WSO2 internal Repository</name>
-            <url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-                <checksumPolicy>ignore</checksumPolicy>
-            </releases>
-        </repository>
-    </repositories>
 
     <dependencies>
         <dependency>
             <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
-            <version>4.2.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.identity.application.common</artifactId>
-            <version>4.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.identity.oauth</artifactId>
-            <version>4.2.3</version>
+            <version>${org.wso2.carbon.identity.application.common.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr.annotations</artifactId>
-            <version>1.9.6</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.core.services</artifactId>
-            <version>4.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.utils</artifactId>
-            <version>4.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.identity.base</artifactId>
-            <version>4.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.identity.core</artifactId>
-            <version>4.2.0</version>
+            <version>${org.apache.felix.scr.annotations.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -87,16 +41,17 @@ limitations under the License.
             <version>4.2.5</version>
             <type>jar</type>
         </dependency>
-        <dependency>
-            <groupId>com.axiata.dialog</groupId>
+	 <dependency>
+            <groupId>com.wso2telco.core</groupId>
             <artifactId>mnc-resolver</artifactId>
-            <version>1.0.0</version>
+            <version>${mnc.resolver.version}</version>
             <type>jar</type>
         </dependency>
-        <dependency>
+        
+	<dependency>
             <groupId>Authendicatorselector</groupId>
-            <artifactId>Authendicatorselector</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>com.wso2telco.ids.authentic.selector</artifactId>
+            <version>${com.wso2telco.ids.authentic.selector.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
