--- a/dropins/openid-token-builder/pom.xml
+++ b/dropins/openid-token-builder/pom.xml
@@ -4,13 +4,12 @@
 
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
-		<artifactId>component-ids</artifactId>
+		<artifactId>com.wso2telco.ids.dropins.ids</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.wso2telco.ids</groupId>
-	<artifactId>openid-token-builder</artifactId>
+	<artifactId>com.wso2telco.ids.openid.token.builder</artifactId>
 	<packaging>bundle</packaging>
 
 	<name>OpenID Token Builder</name>
@@ -116,6 +115,7 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
+		<version>${maven.bundle.plugin.version}</version>
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
