--- a/dropins/pom.xml
+++ b/dropins/pom.xml
@@ -4,15 +4,15 @@
 
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
-		<artifactId>component-ids</artifactId>
+		<artifactId>component.ids</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<artifactId>dropins</artifactId>
-	<packaging>bundle</packaging>
+	<artifactId>com.wso2telco.ids.dropins.ids</artifactId>
+	<packaging>pom</packaging>
 
-	<name>OpenID Token Builder</name>
+	<name>Dropins</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -30,10 +30,25 @@
 		<org.wso2.carbon.identity.provider.version>4.4.0</org.wso2.carbon.identity.provider.version>
 		<json.smart.version>1.0.9</json.smart.version>
 		<org.wso2.carbon.apimgt.impl.version>1.2.2</org.wso2.carbon.apimgt.impl.version>
+		<maven.bundle.plugin.version>3.0.0</maven.bundle.plugin.version
+		<org.wso2.carbon.core.services.version>4.4.0</org.wso2.carbon.core.services.version>
+		<org.wso2.carbon.utils.version>4.4.0</org.wso2.carbon.utils.version>
 	</properties>
 
 	<dependencies>
-		
+
+		 <dependency>
+        	    <groupId>org.wso2.carbon</groupId>
+	            <artifactId>org.wso2.carbon.utils</artifactId>
+        	    <version>${org.wso2.carbon.utils.version}</version>
+	        </dependency>
+
+		  <dependency>
+        	    <groupId>org.wso2.carbon</groupId>
+	            <artifactId>org.wso2.carbon.core.services</artifactId>
+        	    <version>${org.wso2.carbon.core.services.version}</version>
+	        </dependency>
+	
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.oauth</artifactId>
