--- a/lib/url-shorten/pom.xml
+++ b/lib/url-shorten/pom.xml
@@ -16,49 +16,40 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+                <groupId>com.wso2telco.ids</groupId>
+                <artifactId>component.ids</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
+        </parent>
 
-	<groupId>UrlShorten</groupId>
-	<artifactId>url-shorten</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>com.wso2telco.ids.urlshorten</artifactId>
 	<packaging>jar</packaging>
 	<url>http://maven.apache.org</url>
 
-	<parent>
-		<groupId>com.wso2telco.ids</groupId>
-		<artifactId>component-ids</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-	</parent>
-
 	<name>Url Shorten</name>
 
+	<properties>
+                <json.simple.version>1.1</json.simple.version>
+                <jersey.client.version>1.8</jersey.client.version>
+        </properties>
+
 	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.1</version>
-			<type>jar</type>
-		</dependency>
 
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.3.4</version>
+			<version>${httpclient.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-client</artifactId>
-			<version>1.8</version>
+			<version>${jersey.client.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
-			<version>1.1</version>
+			<version>${json.simple.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -80,20 +71,7 @@
 					</descriptorRefs>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
 
 </project>
