--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
                 <mnc.resolver.version>1.0.0-SNAPSHOT</mnc.resolver.version>
                 <httpclient.version>4.3.4</httpclient.version>
                 <gson.version>2.1</gson.version>
+		<com.wso2telco.ids.urlshorten.version>1.0.0-SNAPSHOT</com.wso2telco.ids.urlshorten.version>
+		<com.wso2telco.ids.authentic.selector.version>1.0.0-SNAPSHOT</com.wso2telco.ids.authentic.selector.version>
         </properties>
 	<dependencies>
 
