--- a/dropins/gsma-authenticators/pom.xml
+++ b/dropins/gsma-authenticators/pom.xml
@@ -14,14 +14,14 @@
     <packaging>bundle</packaging>
     <name>GSMA Application Authenticators</name>
 	<properties>
-		<org.wso2.carbon.identity.application.common.version>4.0.0</org.wso2.carbon.identity.application.common.version>
-		<org.apache.felix.scr.annotations.version>1.9.6</org.apache.felix.scr.annotations>
+		<org.wso2.carbon.identity.application.common.version>4.4.0</org.wso2.carbon.identity.application.common.version>
+		<org.apache.felix.scr.annotations.version>1.9.6</org.apache.felix.scr.annotations.version>
 	</properties>
 
 
     <dependencies>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.identity.application.common</artifactId>
             <version>${org.wso2.carbon.identity.application.common.version}</version>
         </dependency>
@@ -44,13 +44,13 @@
         </dependency>
         
 	<dependency>
-            <groupId>Authendicatorselector</groupId>
+            <groupId>com.wso2telco.ids</groupId>
             <artifactId>com.wso2telco.ids.authentic.selector</artifactId>
             <version>${com.wso2telco.ids.authentic.selector.version}</version>
-            <scope>provided</scope>
+            <!--scope>provided</scope-->
         </dependency>
         <dependency>
-            <groupId>UrlShorten</groupId>
+            <groupId>com.wso2telco.ids</groupId>
             <artifactId>com.wso2telco.ids.urlshorten</artifactId>
             <version>${com.wso2telco.ids.urlshorten.version}</version>
             <scope>provided</scope>
@@ -64,6 +64,7 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
+		<version>${maven.bundle.plugin.version}</version>
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
