--- a/lib/url-shorten/pom.xml
+++ b/lib/url-shorten/pom.xml
@@ -18,9 +18,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
                 <groupId>com.wso2telco.ids</groupId>
-                <artifactId>component.ids</artifactId>
+                <artifactId>com.wso2telco.ids.lib</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
         </parent>
 
 	<artifactId>com.wso2telco.ids.urlshorten</artifactId>
