--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,9 @@
 	</prerequisites>
 
 	<modules>
-        <module>lib/user-claim-retriever</module>
-		<module>dropins/openid-token-builder</module>
-        <module>webapps/authentication-endpoint</module>
-        <module>webapps/operator-proxy-service</module>
-        <module>webapps/url-shorten</module>
-        <module>webapps/session-updater</module>
-        <module>webapps/user-registration</module>
+        	<module>lib</module>
+		<module>dropins</module>
+        	<!--module>webapps</module-->
 	</modules>
         <properties>
                 <maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
@@ -32,7 +28,6 @@
                 <maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
                 <junit.version>3.8.1</junit.version>
                 <commons.lang.version>2.3</commons.lang.version>
-                <com.wso2telco.ids.authentic.selector.version>1.0.0-SNAPSHOT</com.wso2telco.ids.authentic.selector.version>
                 <mnc.resolver.version>1.0.0-SNAPSHOT</mnc.resolver.version>
                 <httpclient.version>4.3.4</httpclient.version>
                 <gson.version>2.1</gson.version>
