--- a/dropins/pom.xml
+++ b/dropins/pom.xml
@@ -4,24 +4,23 @@
 
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
-		<artifactId>component.ids</artifactId>
+		<artifactId>component-ids</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<artifactId>com.wso2telco.ids.dropins.ids</artifactId>
+	<artifactId>dropins</artifactId>
 	<packaging>pom</packaging>
-
 	<name>Dropins</name>
 	<url>http://maven.apache.org</url>
 
 
-   	 <modules>
-       		<module>authenticate-selector</module>
-		<!--module>openid-token-builder</module-->
-        </modules>
-
-
+	<modules>
+		<module>authenticate-selector</module>
+		<module>gsma-authenticators-other-operators</module>
+		<module>gsma-authenticators</module>
+		<module>openid-token-builder</module>
+	</modules>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -46,18 +45,18 @@
 
 	<dependencies>
 
-		 <dependency>
-        	    <groupId>org.wso2.carbon</groupId>
-	            <artifactId>org.wso2.carbon.utils</artifactId>
-        	    <version>${org.wso2.carbon.utils.version}</version>
-	        </dependency>
+		<dependency>
+			<groupId>org.wso2.carbon</groupId>
+			<artifactId>org.wso2.carbon.utils</artifactId>
+			<version>${org.wso2.carbon.utils.version}</version>
+		</dependency>
 
-		  <dependency>
-        	    <groupId>org.wso2.carbon</groupId>
-	            <artifactId>org.wso2.carbon.core.services</artifactId>
-        	    <version>${org.wso2.carbon.core.services.version}</version>
-	        </dependency>
-	
+		<dependency>
+			<groupId>org.wso2.carbon</groupId>
+			<artifactId>org.wso2.carbon.core.services</artifactId>
+			<version>${org.wso2.carbon.core.services.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.oauth</artifactId>
@@ -105,38 +104,38 @@
 			<version>${org.wso2.carbon.identity.provider.version}</version>
 		</dependency>
 		<dependency>
-		    <groupId>com.nimbusds</groupId>
-		    <artifactId>nimbus-jose-jwt</artifactId>
-		    <version>${nimbus.jose.jwt.version}</version>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
+			<version>${nimbus.jose.jwt.version}</version>
 		</dependency>
 		<dependency>
-		    <groupId>net.minidev</groupId>
-		    <artifactId>json-smart</artifactId>
-		    <version>${json.smart.version}</version>
+			<groupId>net.minidev</groupId>
+			<artifactId>json-smart</artifactId>
+			<version>${json.smart.version}</version>
 		</dependency>
 		<dependency>
-		  <groupId>org.wso2.carbon</groupId>
-		  <artifactId>org.wso2.carbon.apimgt.impl</artifactId>
-		  <version>${org.wso2.carbon.apimgt.impl.version}</version>
-		  <type>jar</type>
-		 </dependency>
+			<groupId>org.wso2.carbon</groupId>
+			<artifactId>org.wso2.carbon.apimgt.impl</artifactId>
+			<version>${org.wso2.carbon.apimgt.impl.version}</version>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
 
-	  <build>
-        	<plugins>
-	            <plugin>
-                	<groupId>org.apache.felix</groupId>
-                	<artifactId>maven-scr-plugin</artifactId>
-             	   <version>1.9.0</version>
-                	<executions>
-                	    <execution>
-                	        <id>generate-scr-scrdescriptor</id>
-        	                <goals>
-	                            <goal>scr</goal>
-                        	</goals>
-                	    </execution>
-        	        </executions>
-	            </plugin>
-        	</plugins>
-	    </build>
-	</project>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-scr-plugin</artifactId>
+				<version>1.9.0</version>
+				<executions>
+					<execution>
+						<id>generate-scr-scrdescriptor</id>
+						<goals>
+							<goal>scr</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+</project>
