--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -17,24 +17,21 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>com.wso2telco.ids</groupId>
+		<artifactId>component-ids</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 
-	 <parent>
-                <groupId>com.wso2telco.ids</groupId>
-                <artifactId>component.ids</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
-                <relativePath>../pom.xml</relativePath>
-        </parent>
-
+	<artifactId>lib</artifactId>
+	<packaging>pom</packaging>
+	<url>http://maven.apache.org</url>
+	<name>WSO2Telco supportive libraries</name>
 
 	<modules>
-                <module>url-shorten</module>
+		<module>url-shorten</module>
 		<module>user-claim-retriever</module>
-        </modules>
-
-        <artifactId>com.wso2telco.ids.lib</artifactId>
-        <packaging>pom</packaging>
-        <url>http://maven.apache.org</url>
-
-        <name>WSO2Telco supportive ibraries </name>
+	</modules>
 
 </project>
