--- a/lib/user-claim-retriever/pom.xml
+++ b/lib/user-claim-retriever/pom.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+	<parent>
+		<groupId>com.wso2telco.ids</groupId>
+		<artifactId>lib</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
+
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.axiata.mife</groupId>
 	<artifactId>user-claim-retriever</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<name>User Claim Retriever</name>
+	<name>User Claim Retriever - Lib</name>
 	<!--<packaging>war</packaging> -->
 
 	<dependencies>
