--- a/webapps/authentication-endpoint/pom.xml
+++ b/webapps/authentication-endpoint/pom.xml
@@ -19,7 +19,7 @@
 
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
-		<artifactId>component-ids</artifactId>
+		<artifactId>webapps</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
@@ -32,7 +32,7 @@
 	<description>Identity Application Authentication Endpoint</description>
 	<url>http://wso2.org</url>
 
-	<name>Authentication Endpoint</name>
+	<name>Authentication Endpoint - Webapps</name>
 
 	<dependencies>
 		<dependency>
