--- a/webapps/operator-proxy-service/pom.xml
+++ b/webapps/operator-proxy-service/pom.xml
@@ -15,19 +15,20 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+	<parent>
+		<groupId>com.wso2telco.ids</groupId>
+		<artifactId>webapps</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+	</parent>
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.axiata.dialog</groupId>
 	<artifactId>operator-proxy-service</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Operator Proxy Service</name>
+	<name>Operator Proxy Service - Webapps</name>
 	<url>http://maven.apache.org</url>
-
-	<parent>
-		<groupId>com.wso2telco.ids</groupId>
-		<artifactId>component-ids</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-	</parent>
 
 	<dependencies>
 		<dependency>
