--- a/webapps/session-updater/pom.xml
+++ b/webapps/session-updater/pom.xml
@@ -18,7 +18,7 @@
 
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
-		<artifactId>component-ids</artifactId>
+		<artifactId>webapps</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
@@ -28,7 +28,7 @@
 	<version>1.0.0</version>
 	<packaging>war</packaging>
 
-	<name>Session Updater</name>
+	<name>Session Updater - Webapps</name>
 
 	<dependencies>
 		<dependency>
