--- a/webapps/user-registration/pom.xml
+++ b/webapps/user-registration/pom.xml
@@ -18,7 +18,7 @@
 
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
-		<artifactId>component-ids</artifactId>
+		<artifactId>webapps</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
@@ -28,7 +28,7 @@
 	<version>1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<name>User Registration</name>
+	<name>User Registration - Webapps</name>
 
 	<properties>
 		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
