--- a/dropins/pom.xml
+++ b/dropins/pom.xml
@@ -24,17 +24,12 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<org.wso2.carbon.identity.oauth.version>4.4.0</org.wso2.carbon.identity.oauth.version>
 		<org.wso2.amber.version>0.22.1358727.wso2v4</org.wso2.amber.version>
 		<org.wso2.carbon.logging.version>4.4.0</org.wso2.carbon.logging.version>
-		<org.wso2.carbon.identity.base.version>4.4.0</org.wso2.carbon.identity.base.version>
 		<org.apache.sling.commons.json.version>2.0.6</org.apache.sling.commons.json.version>
 		<json.path.version>0.9.1</json.path.version>
-		<org.wso2.carbon.identity.core.version>4.4.0</org.wso2.carbon.identity.core.version>
 		<com.gsma.authenticators.version>1.0.0</com.gsma.authenticators.version>
-		<org.wso2.carbon.identity.application.authentication.framework.version>4.4.0</org.wso2.carbon.identity.application.authentication.framework.version>
 		<nimbus.jose.jwt.version>2.26.1</nimbus.jose.jwt.version>
-		<org.wso2.carbon.identity.provider.version>4.4.0</org.wso2.carbon.identity.provider.version>
 		<json.smart.version>1.0.9</json.smart.version>
 		<org.wso2.carbon.apimgt.impl.version>1.2.2</org.wso2.carbon.apimgt.impl.version>
 		<maven.bundle.plugin.version>3.0.0</maven.bundle.plugin.version>
@@ -60,7 +55,7 @@
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.oauth</artifactId>
-			<version>${org.wso2.carbon.identity.oauth.version}</version>
+			<version>${org.wso2.carbon.identity.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.amber.wso2</groupId>
@@ -75,7 +70,7 @@
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.base</artifactId>
-			<version>${org.wso2.carbon.identity.base.version}</version>
+			<version>${org.wso2.carbon.identity.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.sling</groupId>
@@ -90,18 +85,18 @@
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.core</artifactId>
-			<version>${org.wso2.carbon.identity.core.version}</version>
+			<version>${org.wso2.carbon.identity.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
-			<version>${org.wso2.carbon.identity.application.authentication.framework.version}</version>
+			<version>${org.wso2.carbon.identity.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.provider</artifactId>
-			<version>${org.wso2.carbon.identity.provider.version}</version>
+			<version>${org.wso2.carbon.identity.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.nimbusds</groupId>
