--- a/dropins/authenticate-selector/pom.xml
+++ b/dropins/authenticate-selector/pom.xml
@@ -16,9 +16,7 @@
 
 	 <properties>
 		<saxon.he.version>9.6.0-1</saxon.he.version>
-		<org.wso2.carbon.identity.application.common.version>4.4.0</org.wso2.carbon.identity.application.common.version>
 		<org.apache.felix.scr.annotations.version>1.9.6</org.apache.felix.scr.annotations.version>
-		<org.wso2.carbon.identity.core.version>4.4.0</org.wso2.carbon.identity.core.version>
 		<gson.version>2.1</gson.version>
 		<httpclient.version>4.2.5</httpclient.version>
 	</properties>
@@ -33,7 +31,7 @@
         <dependency>
             <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.identity.application.common</artifactId>
-            <version>${org.wso2.carbon.identity.application.common.version}</version>
+            <version>${org.wso2.carbon.identity.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
@@ -48,7 +46,7 @@
         <dependency>
             <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.identity.core</artifactId>
-            <version>${org.wso2.carbon.identity.core.version}</version>
+            <version>${org.wso2.carbon.identity.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
